private-fabflix/Fabflix-main/main/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fabflix-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /(.+)
            pathType: ImplementationSpecific
            backend:
              service:
                name: fabflix-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fabflix-service
                port:
                  number: 80
